# OALWrapper

./: .gitignore  CMakeLists.txt  TODO
Include/OALWrapper/: OAL_AudioData.h  OAL_Buffer.h  OAL_CustomStream.h  OAL_Device.h  OAL_EFX.h  OAL_EFXManager.h  OAL_Effect.h  OAL_EffectSlot.h  OAL_Effect_Reverb.h  OAL_Filter.h  OAL_Funcs.h  OAL_Helper.h  OAL_Init.h  OAL_Loaders.h  OAL_LoggerObject.h  OAL_LowLevelObject.h  OAL_OggSample.h  OAL_OggStream.h  OAL_Playback.h  OAL_Sample.h  OAL_Source.h  OAL_SourceManager.h  OAL_Stream.h  OAL_Types.h  OAL_WAVSample.h
Samples/Hello/: main.cpp
Samples/PlaySound/: main.cpp
Samples/Playlist/: main.cpp
Samples/Simple/: main.cpp
Source/: OAL_AudioData.cpp  OAL_Buffer.cpp  OAL_CustomStream.cpp  OAL_Device.cpp  OAL_EFX.cpp  OAL_EFXManager.cpp  OAL_Effect.cpp  OAL_EffectSlot.cpp  OAL_Effect_Reverb.cpp  OAL_Filter.cpp  OAL_Helper.cpp  OAL_Init.cpp  OAL_Loaders.cpp  OAL_LoggerObject.cpp  OAL_OggSample.cpp  OAL_OggStream.cpp  OAL_Playback.cpp  OAL_Sample.cpp  OAL_Source.cpp  OAL_SourceManager.cpp  OAL_Stream.cpp  OAL_WAVSample.cpp
tests/Hello/: main.cpp
tests/PlaySound/: main.cpp
